# ghcjs-prim

./: README.md  ghcjs-prim.cabal
GHCJS/: Prim.hs
GHCJS/Prim/: Internal.hs
GHCJS/Prim/TH/: Eval.hs  Types.hs
cbits/: ghcjs-prim.c
