name:                ghcjs-prim
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://github.com/ghcjs
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: GHCJS.Prim     
  build-depends:       base >= 4 && < 5, ghc-prim 
  default-language:    Haskell2010
  ghc-options: -package-name ghcjs-prim

